    ``analysis.helix_analysis`` (PR #2929)
  * Move water bridge analysis from hbonds to hydrogenbonds (Issue #2739 PR #2913)
  * `threadpoolctl` is required for installation (Issue #2860)
  * Added OpenMM coordinate and topology converters (Issue #2863, PR #2917)
  * Writing a TRZ file with no box information now raises a warning (Issue #3307)

Deprecations
  * The attributes `p_components`, `variance`, `cumulated_variance` and 
    `mean_atoms` in `analysis.pca.PCA` are now deprecated in favour of 
    `results.p_components`, `results.variance`, `results.cumulated_variance` 
    and `results.mean_atoms`. They will be removed in 3.0.0 
    (Issues #3275 #3285)
  * The `bins`, `edges`, `count`, `rdf` attributes for `analysis.rdf.InterRDF`
    and `analysis.rdf.InterRDF_s`, and `cdf` attributes for
    `analysis.rdf.InterRDF_s` are now deprecated in favour of `results.bins`,
    `results.edges`, `results.count`, `results.rdf` and `results.cdf`
    (Issue #3276, #3261)
  * The `hydrogenbonds.WaterBridgeAnalysis.table` attribute is now deprecated and will
    be removed in 3.0.0.
  * The `hydrogenbonds.WaterBridgeAnalysis.network` attribute is now deprecated
    in favour of `hydrogenbonds.WaterBridgeAnalysis.results.network`. It will be
    removed in 3.0.0 (Issue #3261, Issue #3270)
  * The `analysis.Contacts.timeseries` attribute is now deprecated in favour of
    `analysis.Contacts.results.timeseries`. It will be removed in 3.0.0
    (Issue #3261)
  * In 3.0.0 the ParmEd classes will only be accessible from the
    `MDAnalysis.converters` module.
  * The `analysis.polymer.PersistenceLength.lb`,
    `analysis.polymer.PersistenceLength.lp` and
    `analysis.polymer.PersistenceLength.fit` attributes are now deprecated in
    favour of `analysis.polymer.PersistenceLength.results.lb`,
    `analysis.polymer.PersistenceLength.results.lp` and
    `analysis.polymer.PersistenceLength.results.fit` respectively. They will
    be removed in 3.0.0 (Issues #3289, #3291)